examples/invalid/NonSerializedOnType.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@non_serialized
struct BadNS {
    int32_t x;
};

